Fix alignment of gridlines.

--- a/ScheduleBox/ClientApp/src/app/chart/chart.component.scss
+++ b/ScheduleBox/ClientApp/src/app/chart/chart.component.scss
@@ -9,12 +9,6 @@ $label-width: 150px;
   display: grid;
   grid-template-rows: auto auto auto;
   grid-template-columns: auto;
-  box-sizing: border-box;
-
-  &__columns-8-hours {
-    display: grid;
-    grid-template-columns: $label-width repeat(8 * 4, 1fr);
-  }
 
   &__columns-12-hours {
     display: grid;
@@ -22,24 +16,14 @@ $label-width: 150px;
     grid-template-columns: $label-width repeat(12 * 4, 1fr);
   }
 
-  &__columns-16-hours {
-    display: grid;
-    grid-template-columns: $label-width repeat(16 * 4, 1fr);
-  }
-
-  &__columns-24-hours {
-    display: grid;
-    grid-template-columns: $label-width repeat(24 * 4, 1fr);
-  }
-
   &__columns {
-    grid-gap: 2px;
     grid-row: 1;
     grid-column: 1;
+    align-items: end;
     > li {
       list-style-type: none;
-      align-self: end;
       background: rgb(203, 255, 201);
+      margin: 0 1px;
     }
   }
 
@@ -75,9 +59,10 @@ $label-width: 150px;
     grid-row: 1 / 3;
     grid-column: 1;
     > span {
-      border-left-width: 1px;
+      border-left-width: 2px;
       border-left-style: solid;
       border-left-color: lightgray;
+      margin-left: -1px;
     }
   }
 
